--- a/src/styles.css
+++ b/src/styles.css
@@ -182,7 +182,7 @@ footer {
       rgba(39, 32, 68, 0.8),
       rgba(39, 32, 68, 0.8)
     ),
-    url(../images/sydney-footer2.jpg);
+    url(../images/sydneyfooter.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
